# ease-caml

./: README.md  dune-project  ease-caml.opam
.github/workflows/: static.yml
doc/: index.mld
examples/: back_and_forth.ml  comb_back_and_forth.ml  dune  repeat_simple_tween.ml  repeat_twice.ml  simple_callback.ml  simple_tween.ml
lib/: dune  easers.ml  easers.mli  tween.ml  tween.mli
test/: dune
