(lang dune 3.23)

(name ease-caml)

(generate_opam_files true)

(source
 (github Modular-Game-Components/ease-caml))

(authors "Christopher Sumnicht <csumnicht@berkeley.edu>")

(maintainers "Christopher Sumnicht <csumnicht@berkeley.edu>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ease-caml)
 (synopsis "A easing/tweening library for OCaml.")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("game" "easing" "tween" "animation")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
